Fixed viewport issue with craps game on mobile device

--- a/games/craps/craps_style.css
+++ b/games/craps/craps_style.css
@@ -53,4 +53,10 @@ body {
         padding: 5%;
         margin: 5%;
     }
+    .output textarea {
+        width: 100%;
+        height :150px;
+        max-width: 100%;
+        box-sizing: border-box;
+    }
 }
